# scriptony-multihost

./: .dependency-cruiser.json  .dockerignore  .env.local.backup.remote.20260422_115724  .env.local.example  .env.production  .env.shim.local.example  .eslintrc.cjs  .fallowrc.jsonc  .gitignore  .gitleaks.toml  .liveui.json  .npmrc  .prettierignore  .semgrepignore  .shimwrappercheckrc  AGENTS.md  Dockerfile.frontend  README.md  appwrite.config.json  appwrite.json  docker-compose.legacy.yml  docker-compose.yml  eslint.config.mjs  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  skills-lock.json  tsconfig.json  vercel.json  vite.config.ts  vitest.config.ts
.claude/: settings.json
.cursor/: mcp.json  readme-contract.md
.husky/: pre-push
.qa/: edge-cases.md  project.yaml  runner-profile.yaml  setup-report.md
.tauri/: scriptony-updater.key.pub
.understand-anything/: .understandignore  config.json
concepts/: hörbuch structure refactor  puppet-layer-concept.de.md  puppet-layer-concept.en.md
docs/: 1) DEVELOPMENT_WORKFLOW.md  AI-SERVICE-API.md  AI-SERVICE-REFACTOR.md  AI-SETTINGS-USER-GUIDE.md  AKTUELLER_STAND_2026-04-08_2317.md  ARCHITECTURE_LOCAL_CLOUD.md  DEPLOYMENT.md  (+53 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  local-project-fs.json  workspace-fs.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: blender.rs  kokoro.rs  mod.rs  path_validate.rs  sidecar.rs  voice_design_sidecar.rs  voicebox.rs  workspace.rs
src-tauri/src/commands/workspace/: delete.rs  mod.rs  paths.rs  validation.rs
(+2189 files in other folders)
